<resources>
    <string name="app_name">"Blockchain"</string>
    <string name="app_dashboard">Dashboard</string>
    <string name="app_wallet">Wallet</string>
    <string name="stats_title">Bitcoin Stats</string>
    <string name="stats_sub_title">Bitcoin Summary statistics for the last 24 hours.</string>
    <string name="stats_block_summary_heading"> BLOCK SUMMARY</string>
    <string name="stats_transaction_summary_heading"> TRANSACTION SUMMARY</string>
    <string name="stats_market_summary_heading"> MARKET SUMMARY</string>
    <string name="stats_mining_cost"> MINING COST</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_stats">Stats</string>
    <string name="bottom_nav_market">Market</string>
    <string name="bottom_drawer_settings">Settings</string>
    <string name="nav_drawer_samle_name">John Wick</string>
    <string name="nav_drawer_sample_email">johnwick@gmail.com</string>
    <string name="nav_drawer_wallet">Wallet</string>
    <string name="nav_drawer_portal">Learn</string>
    <string name="nav_drawer_lockbox">Lockbox</string>
</resources>
