<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/empty_group"
        android:checkableBehavior="none" />

    <group
        android:id="@+id/nav_top"
        android:checkableBehavior="single">

    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/nav_drawer_wallet" />

    <item
        android:id="@+id/nav_portal"
        android:icon="@drawable/ic_help"
        android:title="@string/nav_drawer_portal" />

    <item
        android:id="@+id/nav_lock_box"
        android:icon="@drawable/ic_lock"
        android:title="@string/nav_drawer_lockbox" />

    </group>

    <group
        android:id="@+id/nav_drawer_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_drawer_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/bottom_drawer_settings" />
    </group>

</menu>